[package]
name = "galop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
docker-api = "0.14.0"
futures-util = "0.3.28"
git2 = "0.18.1"
hex-literal = "0.4.1"
openssl-sys = "0.9.93"
serde = "1.0.188"
serde_json = "1.0.107"
sha1 = "0.10.6"
tokio = { version = "1.32.0", features = ["full"] }
